[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
kv = { version = "0.24.0", features = ["json-value"] }
sqlx = { version = "=0.8.1", features = ["sqlite"] }
rusqlite = "=0.32.1"
